--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -11,19 +11,22 @@
       <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
     <div class="offcanvas-body">
-      <!--            Todo: change idss-->
-      <div th:each="category: ${categories}" class="form-check" >
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-        <label th:text="${category}" class="form-check-label" for="flexCheckDefault">
+      <form >
+        <!--            Todo: change idss-->
+        <div th:each="category: ${categories}" class="form-check" >
+          <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+          <label th:text="${category}" class="form-check-label" for="flexCheckDefault">
 
-        </label>
-      </div>
-      <label>Type of Joke</label>
-      <select class="form-select" aria-label="Default select example">
-        <option selected value="1">All</option>
-        <option value="2">One-liners</option>
-        <option value="3">Two-part</option>
-      </select>
+          </label>
+        </div>
+        <label>Type of Joke</label>
+        <select class="form-select" aria-label="Default select example">
+          <option selected value="1">All</option>
+          <option value="2">One-liners</option>
+          <option value="3">Two-part</option>
+        </select>
+        <button class="btn btn-primary mt-3" type="submit">search</button>
+      </form>
     </div>
   </div>
 </body>
