fix the bug where single after twopart shows the delivery

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,6 +28,7 @@
                     }
                     else{
                         front.innerHTML = jsonData.joke;
+                        back.innerHTML = "";
                     }
                     //     console.log(jsonData);
                     // Process the JSON data as needed
