--- a/src/main/resources/templates/favourite.html
+++ b/src/main/resources/templates/favourite.html
@@ -14,13 +14,39 @@
 
         <!-- cards : -->
         <div class="row row-cols-1 row-cols-md-2 g-4">
-            <div th:insert="fragments/card2.html :: card2" class="col"></div>
-            <div th:insert="fragments/card2.html :: card2" class="col"></div>
-            <div th:insert="fragments/card2.html :: card2" class="col"></div>
-            <div th:insert="fragments/card2.html :: card2" class="col"></div>
-            <div th:insert="fragments/card2.html :: card2" class="col"></div>
-            <div th:insert="fragments/card2.html :: card2" class="col"></div>
-            <div th:insert="fragments/card2.html :: card2" class="col"></div>
+            <div class="col">
+                <div th:insert="fragments/card2.html :: card2" ></div>
+                <div>delete</div>
+            </div>
+            <div class="col">
+                <div th:insert="fragments/card2.html :: card2" ></div>
+                <div>delete</div>
+            </div>
+            <div class="col">
+                <div th:insert="fragments/card2.html :: card2" ></div>
+                <div>delete</div>
+            </div>
+            <div class="col">
+                <div th:insert="fragments/card2.html :: card2" ></div>
+                <div>delete</div>
+            </div>
+            <div class="col">
+                <div th:insert="fragments/card2.html :: card2" ></div>
+                <div>delete</div>
+            </div>
+            <div class="col">
+                <div th:insert="fragments/card2.html :: card2" ></div>
+                <div>delete</div>
+            </div>
+<!--            <div th:insert="fragments/card2.html :: card2" class="col"></div>-->
+<!--            <div th:insert="fragments/card2.html :: card2" class="col"></div>-->
+<!--            <div th:insert="fragments/card2.html :: card2" class="col"></div>-->
+<!--            <div th:insert="fragments/card2.html :: card2" class="col"></div>-->
+<!--            <div th:insert="fragments/card2.html :: card2" class="col"></div>-->
+<!--            <div th:insert="fragments/card2.html :: card2" class="col"></div>-->
+        </div>
+        <div class="my-3 row justify-content-center" >
+            <button class="btn btn-primary col-4">More</button>
         </div>
     </div>
     <div th:insert="fragments/menu.html :: menu"> </div>
