--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,124 +1,184 @@
+
+/*OPTION 4: click*/
 body {
-    margin: 0;
-    padding: 0;
-}
-
-h1 {
     text-align: center;
 }
 
-.cardBox {
-    /*float: left;*/
-    font-size: 1.2em;
-    margin: 1% 0 0 1%;
-    perspective: 800px;
-    transition: all 0.8s ease;
-    /*width: 23.7%;*/
+.card-container {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: auto;
 }
 
-.cardBox:hover .card {
-    transform: rotateY( 180deg);
-}
-
-.card {
-    background: #F9B872;
-    cursor: default;
+.joke-card {
+    margin-top: 1rem;
     height: 300px;
-    transform-style: preserve-3d;
-    transition: transform 0.8s ease ;
     width: 100%;
-    -webkit-animation: giro 1s 1;
-    animation: giro 1s 1;
+    position: relative;
+    border-radius: 0.25rem;
 }
 
-.card p {
-    margin-bottom: 1.8em;
-}
-
-.card .front,
-.card .back {
-    backface-visibility: hidden;
+.cardFront,
+.cardBack {
     box-sizing: border-box;
-    color: white;
-    display: block;
-    font-size: 1.2em;
+    border-radius: 0.25rem;
     height: 100%;
-    padding: 0.8em;
-    position: absolute;
-    text-align: center;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
     width: 100%;
+    transition: transform 0.5s ease;
+    position: absolute;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    background-color: #ebf4ff;
 }
-
-.card .front strong {
-    background: #fff;
-    border-radius: 100%;
-    color: #222;
-    font-size: 1.5em;
-    line-height: 30px;
-    padding: 0 7px 4px 6px;
-}
-
-.card .back {
-    transform: rotateY( 180deg);
+.cardBack {
+    transform: perspective(1000px) rotateY(180deg);
     background-color: #FAE7A5;
 }
 
-.card .back a {
-    padding: 0.3em 0.5em;
-    background: #333;
-    color: #fff;
-    text-decoration: none;
-    border-radius: 1px;
-    font-size: 0.9em;
-    transition: all 0.2s ease 0s;
+.cardBack.flipped {
+    transform: perspective(1000px) rotateY(0deg);
 }
 
-.card .back a:hover {
-    background: #fff;
-    color: #333;
-    text-shadow: 0 0 1px #333;
+.cardFront {
+    transform: perspective(1000px) rotateY(0deg);
 }
 
-@-webkit-keyframes giro {
-    from {
-        transform: rotateY( 180deg);
-    }
-    to {
-        transform: rotateY( 0deg);
-    }
+.cardFront.flipped {
+    transform: perspective(1000px) rotateY(-180deg);
 }
 
-@keyframes giro {
-    from {
-        transform: rotateY( 180deg);
-    }
-    to {
-        transform: rotateY( 0deg);
-    }
-}
+/*====== START responsive card option 3===============*/
 
-@media screen and (max-width: 767px) {
-    .cardBox {
-        margin-left: 2.8%;
-        margin-top: 3%;
-        width: 46%;
-    }
-    .card {
-        height: 285px;
-    }
-    .cardBox:last-child {
-        margin-bottom: 3%;
-    }
-}
+/*body {*/
+/*    margin: 0;*/
+/*    padding: 0;*/
+/*}*/
 
-@media screen and (max-width: 480px) {
-    .cardBox {
-        width: 94.5%;
-    }
-    .card {
-        height: 260px;
-    }
-}
+/*h1 {*/
+/*    text-align: center;*/
+/*}*/
+
+/*.cardBox {*/
+/*    !*float: left;*!*/
+/*    font-size: 1.2em;*/
+/*    margin: 1% 0 0 1%;*/
+/*    perspective: 800px;*/
+/*    transition: all 0.8s ease;*/
+/*    !*width: 23.7%;*!*/
+/*}*/
+
+/*.cardBox:hover .card {*/
+/*    transform: rotateY( 180deg);*/
+/*}*/
+
+/*.card {*/
+/*    background: #F9B872;*/
+/*    cursor: default;*/
+/*    height: 300px;*/
+/*    transform-style: preserve-3d;*/
+/*    transition: transform 0.8s ease ;*/
+/*    width: 100%;*/
+/*    -webkit-animation: giro 1s 1;*/
+/*    animation: giro 1s 1;*/
+/*}*/
+
+/*.card p {*/
+/*    margin-bottom: 1.8em;*/
+/*}*/
+
+/*.card .front,*/
+/*.card .back {*/
+/*    backface-visibility: hidden;*/
+/*    box-sizing: border-box;*/
+/*    color: white;*/
+/*    display: block;*/
+/*    font-size: 1.2em;*/
+/*    height: 100%;*/
+/*    padding: 0.8em;*/
+/*    position: absolute;*/
+/*    text-align: center;*/
+/*    width: 100%;*/
+/*}*/
+
+/*.card .front strong {*/
+/*    background: #fff;*/
+/*    border-radius: 100%;*/
+/*    color: #222;*/
+/*    font-size: 1.5em;*/
+/*    line-height: 30px;*/
+/*    padding: 0 7px 4px 6px;*/
+/*}*/
+
+/*.card .back {*/
+/*    transform: rotateY( 180deg);*/
+/*    background-color: #FAE7A5;*/
+/*}*/
+
+/*.card .back a {*/
+/*    padding: 0.3em 0.5em;*/
+/*    background: #333;*/
+/*    color: #fff;*/
+/*    text-decoration: none;*/
+/*    border-radius: 1px;*/
+/*    font-size: 0.9em;*/
+/*    transition: all 0.2s ease 0s;*/
+/*}*/
+
+/*.card .back a:hover {*/
+/*    background: #fff;*/
+/*    color: #333;*/
+/*    text-shadow: 0 0 1px #333;*/
+/*}*/
+
+/*@-webkit-keyframes giro {*/
+/*    from {*/
+/*        transform: rotateY( 180deg);*/
+/*    }*/
+/*    to {*/
+/*        transform: rotateY( 0deg);*/
+/*    }*/
+/*}*/
+
+/*@keyframes giro {*/
+/*    from {*/
+/*        transform: rotateY( 180deg);*/
+/*    }*/
+/*    to {*/
+/*        transform: rotateY( 0deg);*/
+/*    }*/
+/*}*/
+
+/*@media screen and (max-width: 767px) {*/
+/*    .cardBox {*/
+/*        margin-left: 2.8%;*/
+/*        margin-top: 3%;*/
+/*        width: 46%;*/
+/*    }*/
+/*    .card {*/
+/*        height: 285px;*/
+/*    }*/
+/*    .cardBox:last-child {*/
+/*        margin-bottom: 3%;*/
+/*    }*/
+/*}*/
+
+/*@media screen and (max-width: 480px) {*/
+/*    .cardBox {*/
+/*        width: 94.5%;*/
+/*    }*/
+/*    .card {*/
+/*        height: 260px;*/
+/*    }*/
+/*}*/
+
+/*====== END responsive card option 3===============*/
+
 
 /*!* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect *!*/
 /*.flip-card {*/
