--- a/src/main/resources/templates/favourite.html
+++ b/src/main/resources/templates/favourite.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Jokes</title>
@@ -7,48 +8,64 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="../static/style.css">
 </head>
+<script>
+    document.addEventListener("DOMContentLoaded", () => {
+        function handleFlip(f,b) {
+            console.log("flip", f, b);
+            f.classList.toggle('flipped')
+            b.classList.toggle('flipped')
+        }
+        const cards = document.querySelectorAll('.card-con');
+        cards.forEach(card => {
+            const f = document.querySelector('#' + card.id + ' #front');
+            const b = document.querySelector('#' + card.id + ' #back');
+            card.addEventListener('click', () => handleFlip(f,b))
+        });
+    });
+</script>
 <body>
-    <div class="container">
+    <div class="container-fluid">
         <header th:insert="fragments/header.html :: header"> </header>
         <h1>Favourite</h1>
 
         <!-- cards : -->
-        <div class="row row-cols-1 row-cols-md-2 g-4">
-            <div class="col">
-                <div th:insert="fragments/card2.html :: card2" ></div>
+        <div class="row row-cols-1 row-cols-md-2 g-4 mx-3">
+            <div id="one" class="col card-con">
+                <div th:insert="fragments/card2.html :: card2"></div>
+                <div>delete</div>
+            </div>
+            <div id="two" class="col card-con">
+                <div th:insert="fragments/card2.html :: card2"></div>
+                <div>delete</div>
+            </div>
+            <div class="col card-con">
+                <div th:insert="fragments/card2.html :: card2"></div>
                 <div>delete</div>
             </div>
             <div class="col">
-                <div th:insert="fragments/card2.html :: card2" ></div>
+                <div th:insert="fragments/card2.html :: card2"></div>
                 <div>delete</div>
             </div>
             <div class="col">
-                <div th:insert="fragments/card2.html :: card2" ></div>
+                <div th:insert="fragments/card2.html :: card2"></div>
                 <div>delete</div>
             </div>
             <div class="col">
-                <div th:insert="fragments/card2.html :: card2" ></div>
+                <div th:insert="fragments/card2.html :: card2"></div>
                 <div>delete</div>
             </div>
-            <div class="col">
-                <div th:insert="fragments/card2.html :: card2" ></div>
-                <div>delete</div>
-            </div>
-            <div class="col">
-                <div th:insert="fragments/card2.html :: card2" ></div>
-                <div>delete</div>
-            </div>
-<!--            <div th:insert="fragments/card2.html :: card2" class="col"></div>-->
-<!--            <div th:insert="fragments/card2.html :: card2" class="col"></div>-->
-<!--            <div th:insert="fragments/card2.html :: card2" class="col"></div>-->
-<!--            <div th:insert="fragments/card2.html :: card2" class="col"></div>-->
-<!--            <div th:insert="fragments/card2.html :: card2" class="col"></div>-->
-<!--            <div th:insert="fragments/card2.html :: card2" class="col"></div>-->
+            <!--            <div th:insert="fragments/card2.html :: card2" class="col"></div>-->
+            <!--            <div th:insert="fragments/card2.html :: card2" class="col"></div>-->
+            <!--            <div th:insert="fragments/card2.html :: card2" class="col"></div>-->
+            <!--            <div th:insert="fragments/card2.html :: card2" class="col"></div>-->
+            <!--            <div th:insert="fragments/card2.html :: card2" class="col"></div>-->
+            <!--            <div th:insert="fragments/card2.html :: card2" class="col"></div>-->
         </div>
-        <div class="my-3 row justify-content-center" >
+        <div class="my-3 row justify-content-center">
             <button class="btn btn-primary col-4">More</button>
         </div>
     </div>
     <div th:insert="fragments/menu.html :: menu"> </div>
 </body>
+
 </html>
