--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,13 +4,26 @@
 <head>
     <title>Jokes</title>
     <!-- Include Bootstrap CSS -->
-<!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">-->
+    <!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="../static/style.css">
 </head>
 <script>
     document.addEventListener("DOMContentLoaded", () => {
+
+        const card = document.getElementById('clickable');
+        card.addEventListener('click', handleFlip)
+
+        function handleFlip() {
+            if(!card.classList.contains('flip-btn')) return;
+            const f = document.getElementById('front')
+            const b = document.getElementById('back')
+            f.classList.toggle('flipped')
+            b.classList.toggle('flipped')
+        }
+
+        // -----------------------------------
         let front = document.getElementById('frontCardContent'); //NOGA
         let back = document.getElementById('backCardContent'); //NOGA
 
@@ -20,17 +33,17 @@
                     response.json()
                 )
                 .then(jsonData => {
-                    // console.log(jsonData)
                     //TODO: add to constantnsnsts!
-                    if(jsonData.type === "twopart"){
+                    if (jsonData.type === "twopart") {
                         front.innerHTML = jsonData.setup;
                         back.innerHTML = jsonData.delivery;
+                        card.classList.add('flip-btn');
                     }
-                    else{
+                    else {
                         front.innerHTML = jsonData.joke;
                         back.innerHTML = "";
+                        card.classList.remove('flip-btn')
                     }
-                    //     console.log(jsonData);
                     // Process the JSON data as needed
 
                     // Example: Display the joke type and content in the browser
@@ -49,6 +62,7 @@
         });
     });
 </script>
+
 <body>
     <div class="container-fluid">
         <header th:insert="fragments/header.html :: header"> </header>
@@ -71,22 +85,21 @@
 
         <!--    OPTION 2-->
 
-<!--        <div class="artboard">-->
-<!--            <div class="d-flex flex-column align-items-center justify-content-center align-self-center">-->
-            <div class="d-flex flex-column align-items-center row">
+        <!--        <div class="artboard">-->
+        <!--            <div class="d-flex flex-column align-items-center justify-content-center align-self-center">-->
+        <div class="d-flex flex-column align-items-center row">
 
-                    <div th:insert="fragments/card2.html :: card2" class="col-md-6"></div>
-    <!--                <div th:insert="fragments/card.html :: card"></div>-->
-                    <div class="d-flex justify-content-evenly">
-    <!--                <a href="/getJokes" id="generate" class="btn mt-3" style="background-color: #575761; color: white;">Generate New</a>-->
-                        <button id="generate" class="btn mx-2 mt-3" style="background-color: #575761; color: white;">Generate New</button>
-                        <button id="addFavourite" class="btn mx-2 mt-3" style="background-color: #575761; color: white;">Add</button>
-                    </div>
+            <div th:insert="fragments/card2.html :: card2" class="col-md-6"></div>
+            <div class="d-flex justify-content-evenly">
+                <button id="generate" class="btn mx-2 mt-3" style="background-color: #575761; color: white;">Generate New</button>
+                <button id="addFavourite" class="btn mx-2 mt-3" style="background-color: #575761; color: white;">Add</button>
+            </div>
         </div>
-<!--            </div>-->
-<!--        </div>-->
+        <!--            </div>-->
+        <!--        </div>-->
 
     </div>
     <div th:insert="fragments/menu.html :: menu"> </div>
 </body>
+
 </html>
