--- a/src/main/resources/templates/fragments/card2.html
+++ b/src/main/resources/templates/fragments/card2.html
@@ -7,16 +7,19 @@
 </head>
 <body>
   <!--<div th:fragment="card2" class="boxesContainer">-->
-  <div th:fragment="card2" class="card-container">  <!--container-->
-    <div id="clickable" th:class="${type=='twopart' ? 'flip-btn joke-card' : 'not-flip joke-card' }">
+  <div  th:fragment="card2" class="card-container">  <!--container-->
+    <div th:object="${jokeObj}" id="clickable" th:class="*{type}=='twopart' ? 'flip-btn joke-card' : 'not-flip joke-card' ">
+<!--      <div id="clickable" th:if="*{type == 'twopart'}" class="flip-btn joke-card" >-->
+<!--      <div id="clickable" th:unless="*{type == 'twopart'}" class="not-flip joke-card" >-->
+
       <div id="back" class="cardBack">
-        <h3 id="backCardContent" th:text="${delivery}"></h3>
-        <p>( LOL )</p>
+        <h3 id="backCardContent" th:text="*{delivery}"></h3>
+<!--        <p>( LOL )</p>-->
       </div>
 
       <div id="front" class="cardFront">
-        <h3 id="frontCardContent" th:text="${type == 'twopart' ? setup : joke}"></h3>
-        <p>Hover to flip</p>
+        <h3 id="frontCardContent" th:text="*{type} == 'twopart' ? *{setup} : *{joke}"></h3>
+        <p>Click to flip</p>
         <!--        <strong>&#x21bb;</strong>-->
       </div>
 
