added auth interceptor, added /pages/ route to logged in pages, added to user controller login and register get/posts, filters now through pages, works but not implemented to ease on development

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,7 +28,7 @@
         let back = document.getElementById('backCardContent'); //NOGA
 
         document.getElementById("generate").addEventListener("click", () => {
-            fetch('/getJokes')
+            fetch('/pages/getJokes')
                 .then(response =>
                     response.json()
                 )
