--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -14,7 +14,7 @@
       <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
     <div class="offcanvas-body">
-      <form action="#" th:action="@{/search}" th:object="${searchFilter}" method="post">
+      <form action="#" th:action="@{/pages/search}" th:object="${searchFilter}" method="post">
         <!-- Todo: change ids -->
         <div th:each="category: ${categories}" class="form-check">
           <input class="form-check-input" type="checkbox" th:value="${category}" th:id="'category-' + ${category}"
