--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Registration and Login System</title>
+  <title>Login</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
@@ -14,7 +14,7 @@
     <div class="row">
       <div class="col-md-6 offset-md-3">
 
-        <div th:if="${param.error}">
+        <div th:if="${error}">
           <div class="alert alert-danger">Invalid Email or Password</div>
         </div>
         <div th:if="${param.logout}">
@@ -26,10 +26,10 @@
             <h2 class="text-center">Login Form</h2>
           </div>
           <div class="card-body">
-            <form method="post" role="form" th:action="@{/login}" class="form-horizontal">
+            <form method="post" role="form" th:action="@{/users/login}" class="form-horizontal">
               <div class="form-group mb-3">
                 <label class="control-label"> Email</label>
-                <input type="text" id="username" name="username" class="form-control"
+                <input type="text" id="email" name="email" class="form-control"
                   placeholder="Enter email address" />
               </div>
 
@@ -41,7 +41,7 @@
               <div class="form-group mb-3">
                 <button type="submit" class="btn btn-primary">Submit</button>
                 <span> Not registered ?
-                  <a th:href="@{/register}">Register/Signup here</a>
+                  <a th:href="@{/users/register}">Signup here</a>
                 </span>
               </div>
             </form>
