userProfile page displays logged in user info

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -15,7 +15,7 @@
         </button>
         <!--        style="background-color: #575761; color: white;"-->
         <a class="btn btn-secondary me-auto p-2" href="/">Home</a>
-        <a class="btn btn-secondary p-2 me-3" href="/pages/user">Profile</a>
+        <a class="btn btn-secondary p-2 me-3" href="/pages/userprofile">Profile</a>
         <a class="btn btn-secondary p-2" href="/pages/favourite">My Likes</a>
     </div>
 </body>
