--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -18,7 +18,7 @@
             <p>Last Name: <span th:text="${lastName}"></span></p>
             <p>Email: <span th:text="${email}"></span></p>
         </div>
-        <form th:action="@{/users/logout}" method="post">
+        <form th:action="@{/pages/logout}" method="post">
             <button type="submit" class="btn btn-danger">Logout</button>
         </form>
     </div>
