--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,8 +11,8 @@
 </head>
 <script>
     document.addEventListener("DOMContentLoaded", () => {
-
         const card = document.getElementById('clickable');
+        let cardbox = document.getElementById("cardBox");
         card.addEventListener('click', handleFlip)
 
         function handleFlip() {
@@ -35,6 +35,7 @@
                 .then(jsonData => {
                     const f = document.getElementById('front')
                     const b = document.getElementById('back')
+                    cardbox.setAttribute("name", jsonData.id);
                     if(f.classList.contains('flipped')){
                         f.classList.toggle('flipped')
                         b.classList.toggle('flipped')
@@ -66,6 +67,22 @@
                     console.log(error);
                 });
         });
+
+        document.getElementById("addFavourite").addEventListener("click", () => {
+            let jokeId = cardbox.getAttribute("name");
+            fetch('/favourites/add', {
+                method: "POST", // *GET, POST, PUT, DELETE, etc.
+                headers: {"Content-Type": "application/json"},
+                body: jokeId
+                }
+            )
+            .then(response =>
+                console.log(response)
+            )
+            .catch(error => {
+                console.log(error);
+            });
+        });
     });
 </script>
 
@@ -95,7 +112,7 @@
         <!--            <div class="d-flex flex-column align-items-center justify-content-center align-self-center">-->
         <div class="d-flex flex-column align-items-center row">
 
-            <div th:insert="fragments/card2.html :: card2" class="col-md-6"></div>
+            <div id="cardBox" th:name="${jokeObj.id}" th:insert="fragments/card2.html :: card2" class="col-md-6"></div>
             <div class="d-flex justify-content-evenly">
                 <button id="generate" class="btn mx-2 mt-3" style="background-color: #575761; color: white;">Generate New</button>
                 <button id="addFavourite" class="btn mx-2 mt-3" style="background-color: #575761; color: white;">Add</button>
