Adjusted appearance of user profile - now with card

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,8 +1,8 @@
 
 /*OPTION 4: click*/
-body {
-    text-align: center;
-}
+/*body {*/
+/*    text-align: center;*/
+/*}*/
 
 .card-container {
     padding: 20px;
