--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -10,16 +10,35 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container-fluid">
         <header th:insert="fragments/header.html :: header"> </header>
-        <h1>User Profile</h1>
-        <div>
-            <p>First Name: <span th:text="${firstName}"></span></p>
-            <p>Last Name: <span th:text="${lastName}"></span></p>
-            <p>Email: <span th:text="${email}"></span></p>
+        <h2 class="pt-4">User Profile</h2>
+        <div class="row">
+            <div class="col-md-6 offset-md-3">
+
+                <div class="row d-flex justify-content-center align-items-center h-100">
+                    <div class="col-md-12 col-xl-4">
+
+                        <div class="card mt-3" style="border-radius: 15px;">
+                            <div class="card-body text-center">
+                                <div class="mt-3 mb-4">
+                                    <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava2-bg.webp"
+                                         class="rounded-circle img-fluid" style="width: 100px;" />
+                                </div>
+    <!--                                <h4 class="mb-2">Julie L. Arsenault</h4>-->
+                                <div class="mb-4 pb-2">
+                                    <p>First Name: <span th:text="${firstName}"></span></p>
+                                    <p>Last Name: <span th:text="${lastName}"></span></p>
+                                    <p>Email: <span th:text="${email}"></span></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <form th:action="@{/pages/logout}" method="post">
-            <button type="submit" class="btn btn-danger">Logout</button>
+        <form th:action="@{/pages/logout}" method="post" class="mt-3">
+            <button type="submit" class="btn btn-primary">Logout</button>
         </form>
     </div>
     <div th:insert="fragments/menu.html :: menu"> </div>
