--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -50,18 +50,8 @@
                         front.innerHTML = jsonData.joke;
                         back.innerHTML = "";
                         card.classList.remove('flip-btn')
+                        card.classList.add('not-flip')
                     }
-                    // Process the JSON data as needed
-
-                    // Example: Display the joke type and content in the browser
-                    // const jokeType = jsonData.type;
-                    // const jokeContent = jsonData.joke || `${jsonData.setup}\n${jsonData.delivery}`;
-                    //
-                    // const jokeTypeElement = document.getElementById("jokeType");
-                    // const jokeContentElement = document.getElementById("jokeContent");
-                    //
-                    // jokeTypeElement.textContent = `Type: ${jokeType}`;
-                    // jokeContentElement.textContent = jokeContent;
                 })
                 .catch(error => {
                     console.log(error);
@@ -71,7 +61,7 @@
         document.getElementById("addFavourite").addEventListener("click", () => {
             let jokeId = cardbox.getAttribute("name");
             fetch('/favourites/add', {
-                method: "POST", // *GET, POST, PUT, DELETE, etc.
+                method: "POST",
                 headers: {"Content-Type": "application/json"},
                 body: jokeId
                 }
