--- a/src/main/resources/templates/favourite.html
+++ b/src/main/resources/templates/favourite.html
@@ -6,81 +6,9 @@
     <title>Jokes</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="/static/style.css">
 </head>
-<script>
-    //TODO: remove to js file
-    document.addEventListener("DOMContentLoaded", () => {
-        let offset = 3; //TODO : const
-        function handleFlip(f,b) {
-            console.log("flip", f, b);
-            f.classList.toggle('flipped')
-            b.classList.toggle('flipped')
-        }
-
-        function loadMoreFavourites(){
-            fetch('/favourites?offset=' + offset)
-                .then(response =>
-                    response.json()
-                )
-                .then(favourites => {
-                    offset += favourites.length;
-                    console.log(favourites);
-                    addCards(favourites);
-                })
-                .catch(error => {
-                    console.log(error);
-                });
-        }
-
-        function addCards(data){
-            data.forEach((fav)=>{
-                let newDiv = document.createElement('div');
-                newDiv.id = 'card-' + fav.id;
-                newDiv.className =  "col card-con";
-                newDiv.setAttribute("type", fav.type);
-
-                let html = `
-                        <div>\
-                        <div class='card-container'>\
-                        <div id='clickable' class='joke-card ${fav.type === 'twopart' ? 'flip-btn' : 'not-flip'}' >\
-                            <div id="back" class="cardBack"> \
-                             <h3 id="backCardContent">${fav.delivery}</h3>\
-                            </div>\
-                          <div id="front" class="cardFront">\
-                              <h3 id="frontCardContent">${fav.type === 'twopart' ? fav.setup : fav.joke }</h3>
-                              <p class="flip-msg">Click to flip</p>
-                             </div>
-                        </div>
-                  </div>
-                </div>
-                 <div>delete</div>
-`
-                let container = document.getElementById("favouritesContainer");
-                container.appendChild(newDiv);
-                newDiv.innerHTML = html;
-
-                if(fav.type === 'twopart') addCardsEvent(newDiv)
-            })
-
-        }
-
-        function addCardsEvent(card){
-            const f = document.querySelector('#' + card.id + ' #front');
-            const b = document.querySelector('#' + card.id + ' #back');
-            card.addEventListener('click', () => handleFlip(f,b))
-        }
-
-        const loadMoreBtn = document.getElementById("loadMore");
-        let cards = document.querySelectorAll('.card-con');
-
-        cards.forEach(card => {
-            if((card.getAttribute("type") === 'single')) return;
-            addCardsEvent(card)
-        });
-        loadMoreBtn.addEventListener('click', loadMoreFavourites)
-    });
-</script>
+<script src="/static/js/favourite.js"></script>
 <body>
     <div class="container-fluid">
         <header th:insert="fragments/header.html :: header"> </header>
@@ -92,40 +20,6 @@
                 </div>
         </div>
 
-        <!-- cards : -->
-<!--        <div class="row row-cols-1 row-cols-md-2 g-4 mx-3">-->
-
-<!--            <div id="one" class="col card-con">-->
-<!--                <div th:insert="fragments/card2.html :: card2"></div>-->
-<!--                <div>delete</div>-->
-<!--            </div>-->
-<!--            <div id="two" class="col card-con">-->
-<!--                <div th:insert="fragments/card2.html :: card2"></div>-->
-<!--                <div>delete</div>-->
-<!--            </div>-->
-<!--            <div class="col card-con">-->
-<!--                <div th:insert="fragments/card2.html :: card2"></div>-->
-<!--                <div>delete</div>-->
-<!--            </div>-->
-<!--            <div class="col">-->
-<!--                <div th:insert="fragments/card2.html :: card2"></div>-->
-<!--                <div>delete</div>-->
-<!--            </div>-->
-<!--            <div class="col">-->
-<!--                <div th:insert="fragments/card2.html :: card2"></div>-->
-<!--                <div>delete</div>-->
-<!--            </div>-->
-<!--            <div class="col">-->
-<!--                <div th:insert="fragments/card2.html :: card2"></div>-->
-<!--                <div>delete</div>-->
-<!--            </div>-->
-            <!--            <div th:insert="fragments/card2.html :: card2" class="col"></div>-->
-            <!--            <div th:insert="fragments/card2.html :: card2" class="col"></div>-->
-            <!--            <div th:insert="fragments/card2.html :: card2" class="col"></div>-->
-            <!--            <div th:insert="fragments/card2.html :: card2" class="col"></div>-->
-            <!--            <div th:insert="fragments/card2.html :: card2" class="col"></div>-->
-            <!--            <div th:insert="fragments/card2.html :: card2" class="col"></div>-->
-<!--        </div>-->
         <div class="my-3 row justify-content-center">
             <button id="loadMore" class="btn btn-primary col-4">More</button>
         </div>
