change navbar positions

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -8,15 +8,34 @@
 
 <body>
     <!--  NOGA: https://www.baeldung.com/spring-thymeleaf-fragments -->
-    <div th:fragment="header" class="d-flex mb-3 p-2">
-        <button class="btn btn-outline-secondary me-3 p-2 px-3" type="button" data-bs-toggle="offcanvas"
-            data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
+    <div th:fragment="header" class="d-flex p-2">
+<!--        <button class="btn btn-outline-secondary me-3 p-2 px-3" type="button" data-bs-toggle="offcanvas"-->
+<!--            data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">-->
+<!--            &#9776;-->
+<!--        </button>-->
+<!--        &lt;!&ndash;        style="background-color: #575761; color: white;"&ndash;&gt;-->
+<!--        <a class="btn btn-secondary me-auto p-2" href="/">Home</a>-->
+<!--        <a class="btn btn-secondary p-2 me-3" href="/pages/userprofile">Profile</a>-->
+<!--        <a class="btn btn-secondary p-2" href="/pages/favourite">My Likes</a>-->
+
+<!--        NOGA: *home* *profile* *likes*                       *menu*-->
+<!--        <a class="btn btn-secondary p-2 me-2" href="/">Home</a>-->
+<!--        <a class="btn btn-secondary p-2 me-2" href="/pages/userprofile">Profile</a>-->
+<!--        <a class="btn btn-secondary p-2" href="/pages/favourite">My Likes</a>-->
+<!--        <button class="btn btn-outline-secondary ms-auto p-2 px-3 " type="button" data-bs-toggle="offcanvas"-->
+<!--                data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">-->
+<!--            &#9776;-->
+<!--        </button>-->
+
+        <!-- NOGA: *menu*                        *home* *profile* *likes*-->
+        <button class="btn btn-outline-secondary me-auto p-2 px-3 " type="button" data-bs-toggle="offcanvas"
+                data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
             &#9776;
         </button>
-        <!--        style="background-color: #575761; color: white;"-->
-        <a class="btn btn-secondary me-auto p-2" href="/">Home</a>
-        <a class="btn btn-secondary p-2 me-3" href="/pages/userprofile">Profile</a>
+        <a class="btn btn-secondary p-2 me-2" href="/">Home</a>
+        <a class="btn btn-secondary p-2 me-2" href="/pages/userprofile">Profile</a>
         <a class="btn btn-secondary p-2" href="/pages/favourite">My Likes</a>
+
     </div>
 </body>
 
