--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-  <div th:fragment="menu" class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample"
+<!--NOGA : offcanvas-end=right and offcanvas-start=left-->
+  <div th:fragment="menu" class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasExample"
     aria-labelledby="offcanvasExampleLabel">
     <div class="offcanvas-header">
       <h5 class="offcanvas-title" id="offcanvasExampleLabel">Menu</h5>
