--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Header</title>
+    <script src="https://kit.fontawesome.com/4e3daad3f4.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -32,9 +33,20 @@
                 data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
             &#9776;
         </button>
-        <a class="btn btn-secondary p-2 me-2" href="/">Home</a>
-        <a class="btn btn-secondary p-2 me-2" href="/pages/userprofile">Profile</a>
-        <a class="btn btn-secondary p-2" href="/pages/favourite">My Likes</a>
+<!--        <a class="btn btn-secondary p-2 me-2" href="/">Home</a>-->
+        <a class="btn btn-outline-secondary p-2 me-2" href="/">
+            <i class="fa-solid fa-house"></i>
+        </a>
+<!--        <a class="btn btn-secondary p-2 me-2" href="/pages/userprofile">Profile</a>-->
+        <a class="btn btn-outline-secondary p-2 me-2" href="/pages/userprofile">
+            <i class="fa-solid fa-user"></i>
+        </a>
+<!--        <a class="btn btn-secondary p-2" href="/pages/favourite">My Likes</a>-->
+        <a class="btn btn-outline-secondary p-2" href="/pages/favourite">
+            <i class="fa-solid fa-heart"></i>
+<!--            <i class="fa-regular fa-circle-heart" style="color: #899cbd;"></i>-->
+<!--            <i class="fa-duotone fa-square-heart"></i>-->
+        </a>
 
     </div>
 </body>
