--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
         const isFavourite = addBtn.getAttribute("data-isFavourite");
 
         handleInitialButtonState(isFavourite);
-        
+
         function handleInitialButtonState(isFavourite) {
             addBtn.setAttribute("data-isFavourite", isFavourite);
             if (isFavourite) {
@@ -125,7 +125,7 @@
 
             <div id="cardBox" th:name="${jokeObj.id}" th:insert="fragments/card2.html :: card2" class="col-md-6"></div>
             <div class="d-flex justify-content-evenly">
-                <button id="generate" class="btn mx-2 mt-3" style="background-color: #575761; color: white;">Generate New</button>
+                <button id="generate" class="btn btn-secondary mx-2 mt-3" >Generate New</button>
 <!--                <button id="addFavourite" class="btn mx-2 mt-3" th:data-isFavourite="${jokeObj.isFavourite}" th:text="${jokeObj.isFavourite} ? 'Added' : 'Add'" style="background-color: #575761; color: white;">-->
 <!--                </button>-->
                 <a id="addFavourite" class="btn mx-2 mt-3" href="#" th:data-isFavourite="${jokeObj.isFavourite}">
