Added logout message, redirect on invalid login submission to avoid resubmission

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,13 +15,11 @@
       <div class="col-md-6 offset-md-3">
 
         <div th:if="${error}">
-          <div class="alert alert-danger">Invalid Email or Password</div>
+          <div class="alert alert-danger" th:text="${error}"></div>
         </div>
-        <!--TODO: deal with param or remove-->
-        <div th:if="${param.logout}">
-          <div class="alert alert-success"> You have been logged out.</div>
+        <div th:if="${logoutMessage}">
+          <div class="alert alert-success" th:text="${logoutMessage}"></div>
         </div>
-
         <div class="card">
           <div class="card-header">
             <h2 class="text-center">Login Form</h2>
